<resources>
    <string name="app_name">Pizza Delivery App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="pizza_delivery_app">Pizza Delivery App</string>
    <string name="hello_explore_your_favorite_pizzas">Hello explore your favorite Pizzas!</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="log_out">Log Out</string>
    <string name="my_cart">My Cart</string>
    <string name="favorite">Favorite</string>
    <string name="check_out">Check Out</string>
    <string name="title_activity_chef">ChefActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>